--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Sistema de cadastro de Jogos</h1>
+    <h2>js no html</h2>
     <script src="app.js"></script>
 </body>
 </html>
